# pipes-rs

./: Cargo.toml  test.json
arbejd/: Cargo.toml
arbejd/examples/: arbejd.rs
arbejd/src/: boxed.rs  handler.rs  handler_fn.rs  lib.rs  matcher.rs  pipe.rs  then.rs  work.rs  work_ext.rs  work_fn.rs
bycat/: Cargo.toml
bycat-fs/src/: dest.rs  resolver.rs  source.rs
bycat-http/: Cargo.toml
bycat-img/src/: lib.rs
bycat-package/: Cargo.toml
bycat-package/src/: ext.rs  into_package.rs  lib.rs  package.rs
bycat-source/: Cargo.toml
bycat-source/examples/: pipes.rs
bycat-source/src/: channel.rs  cloned.rs  lib.rs  source.rs  unit.rs
bycat/examples/: arbejd.rs
bycat/src/: boxed.rs  lib.rs  matcher.rs  split.rs  util.rs  work.rs  work_ext.rs  work_fn.rs
infinitask/examples/: tasks.rs
infinitask/src/: lib.rs
kravl-core/: Cargo.toml
kravl-core/examples/: example.js  example2.js  kravl.rs  loppen.js
kravl-core/src/: bindings.rs  init.js  lib.rs  pipes.d.ts  pipes.js
output-yall/: loppen-title.txt  output.json
pipes/: Cargo.toml
pipes-example/: Cargo.toml
pipes-example/src/: main.rs
pipes-fs/: Cargo.toml
pipes-fs/examples/: fs.rs
pipes-fs/src/: body.rs  dest.rs  into_package.rs  lib.rs  package.rs  resolver.rs  serialize.rs  source.rs  spawn.rs  work.rs  work_ext.rs
pipes-http/: Cargo.toml
pipes-http/src/: lib.rs
pipes-img/: Cargo.toml
pipes-img/examples/: image.rs
pipes-img/src/: lib.rs
pipes-infinity/: Cargo.toml
pipes-infinity/examples/: infinity.rs
pipes-infinity/src/: lib.rs
pipes-package/: Cargo.toml
pipes-package/src/: content.rs  ext.rs  filter.rs  into_package.rs  lib.rs  matcher.rs  package.rs
pipes-quick/: Cargo.toml  module.d.ts
pipes-quick/examples/: quick.rs
pipes-quick/src/: bindings.rs  init.js  lib.rs
pipes-util/: Cargo.toml
pipes-util/src/: channel.rs  lib.rs  parse.rs  serialize.rs
pipes-utils/: Cargo.toml
pipes-utils/src/: download.rs  fs.rs  lib.rs
pipes/examples/: pipes.rs
pipes/src/: and.rs  cloned.rs  cond.rs  context.rs  dest.rs  error.rs  fs.rs  func.rs  http.rs  lib.rs  matcher.rs  package.rs  pipeline.rs  source.rs  split.rs  then.rs  unit.rs  when.rs  work.rs  work_many.rs  wrap.rs
test/: Cargo.toml  index.html  struct.Url.html  unknown
