[workspace]

resolver = "2"

members = [
  "pipes",
  # "pipes-img",
  # "infinitask",

  # "pipes-fs",
  # "pipes-http",
  # "pipes-util",
  # "pipes-quick",
  "bycat-package",
  # "pipes-example",
  "bycat",
]


[workspace.dependencies]
relative-path = { version = "2", default-features = false }
mime = { version = "0.3", default-features = false }
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
pin-project-lite = { version = "0.2" }
either = { version = "1", default-features = false }
