[package]
name = "pipes-example"
version = "0.1.0"
edition = "2024"

[dependencies]
pipes = { path = "../pipes" }
pipes-package = { path = "../pipes-package" }
pipes-http = { path = "../pipes-http" }
pipes-fs = { path = "../pipes-fs" }
pipes-img = { path = "../pipes-img" }
tokio = { version = "1", features = ["full"] }
bytes.workspace = true
