[package]
name = "pipes-img"
version = "0.1.0"
edition = "2021"

[dependencies]
pipes = { path = "../pipes", features = ["std"] }
image = { version = "0.25" }
mime = { version = "0.3" }
relative-path = { version = "1" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["rt"] }
bytes = { version = "1", default-features = false }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
pipes = { path = "../pipes", features = ["std", "http"] }
reqwest = { version = "0.12" }
