[package]
name = "pipes-img"
version = "0.1.0"
edition = "2021"

[dependencies]
pipes = { path = "../pipes" }
pipes-package = { path = "../pipes-package" }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
mime = { workspace = true }
relative-path = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["rt"] }
bytes = { workspace = true, default-features = false }
pin-project-lite = { version = "0.2" }
webp = { version = "0.3" }
