[package]
name = "pipes-package"
version = "0.1.0"
edition = "2024"

[dependencies]
pipes = { path = "../pipes" }
pin-project-lite = { version = "0.2" }
futures = { version = "0.3" }
either = { version = "1" }
bytes = { version = "1", default-features = false }
mime = { version = "0.3" }
relative-path = { version = "2", features = ["serde"] }
fast-glob = { version = "0.4" }
