[package]
name = "pipes-package"
version = "0.1.0"
edition = "2024"

[dependencies]
pipes = { path = "../pipes" }
pin-project-lite = { workspace = true }
futures = { workspace = true }
either = { version = "1" }
mime = { workspace = true }
relative-path = { workspace = true, features = ["serde", "alloc"] }
fast-glob = { version = "0.4" }
bytes = { workspace = true }

async-trait = { version = "0.1" }
