[package]
name = "pipes-quick"
version = "0.1.0"
edition = "2024"

[dependencies]
pipes = { path = "../pipes" }
pipes-fs = { path = "../pipes-fs" }
pipes-util = { path = "../pipes-util" }

rquickjs = { version = "0.8" }
rquickjs-util = { git = "https://github.com/fairy-render/klaver" }

klaver = { git = "https://github.com/fairy-render/klaver", features = ["pool"] }
klaver-wintercg = { git = "https://github.com/fairy-render/klaver" }

deadpool = { version = "0.12" }

relative-path = { version = "1", features = ["serde"] }
futures = { version = "0.3" }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
