[package]
name = "pipes-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
pipes = { path = "../pipes", features = ["http", "fs"] }
reqwest = { version = "0.12" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["io-util", "fs"] }
relative-path = { version = "1" }
tracing = { version = "0.1" }
