[package]
name = "pipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# http = ["reqwest", "tokio", "http-body", "std"]
# tokio = ["dep:tokio"]
# async-channel = ["dep:async-channel"]
# std = ["mime", "bytes", "relative-path"]
# fs = ["tokio", "tokio/fs", "std", "mime_guess", "tokio-util"]
std = []

[dependencies]
# mime = { version = "0.3", optional = true }
# bytes = { version = "1", default-features = false, optional = true }
async-stream = { version = "0.3" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
pin-project-lite = { version = "0.2" }
either = { version = "*" }

# async-channel = { version = "2", optional = true }

# reqwest = { version = "0.12", optional = true }
# tokio = { version = "1", features = [
#   "macros",
#   "rt",
#   "io-util",
#   "sync",
#   "fs",
# ], optional = true }
# http-body = { version = "1", optional = true }
# relative-path = { version = "1", optional = true }
# mime_guess = { version = "2", optional = true }
# tokio-util = { version = "0.7", features = ["io"], optional = true }
# pinarcmutex = { version = "0.1" } # Split

[dev-dependencies]
tokio = { version = "1", features = ["full"] }


[[example]]
name = "pipes"
path = "examples/pipes.rs"
required-features = ["http", "fs"]
