[package]
name = "pipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = ["futures/std"]

[dependencies]
async-stream = { version = "0.3" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
pin-project-lite = { version = "0.2" }
either = { version = "1" }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }


[[example]]
name = "pipes"
path = "examples/pipes.rs"
