[package]
name = "pipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = ["futures/std"]

[dependencies]
arbejd = { path = "../arbejd", default-features = false }


async-stream = { version = "0.3" }
futures = { workspace = true }
pin-project-lite = { workspace = true }
either = { version = "1" }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }


[[example]]
name = "pipes"
path = "examples/pipes.rs"
